# poetry_editable_dep_script_bug_repro

./: LICENSE  README.md  pyproject.toml
child/: pyproject.toml
child/child/: __init__.py
parent/: __init__.py
